[package]
name = "game_server"
version = "0.1.0"
edition = "2021"

[dependencies]
game_shared = { path = "../game_shared" }
bevy = { version = "0.14", default-features = false, features = ["multi_threaded"] }
bevy_renet = "0.0.12"
bevy_rapier3d = { version = "0.27", default-features = false, features = ["dim3"] }
bincode = "1.3"